blocks/feed/feed.css
.section-outer.feed-tabs {
    margin-top: 75px;
}

.feed-tabs-wrapper .feed-tabs {
    position: relative;

}

.feed-tabs-wrapper .feed-tabs-select-mobile {
    display: block;
    position: relative;
    appearance: none;
    width: 100%;
    border: 1px solid var(--soft-gray);
    border-radius: 7px;
    padding: 8px;
    color: var(--dark-gray);
}

.feed-tabs-wrapper .feed-tabs::after {
    content: "<>";
    position: absolute;
    right: 2%;
    top: 8px;
    font: 17px Consolas, monospace;
    color: #333;
    transform: rotate(90deg);
    pointer-events: none;

}

.feed-tabs-wrapper .feed-tabs-list-desktop {
    display: none;
    justify-content: center;
    gap: 0.5rem;
    padding: 0;
}

.feed-tabs-wrapper .feed-tabs-list-desktop li {
    list-style: none;
    margin: 0;
    flex: 1 1 0;
}


.feed-tabs-wrapper .feed-tabs-list-desktop button {
    padding: 0.5rem 1.5rem;
    background: var(--secondary-brown);
    border: none;
    min-height: 37px;
    width: 100%;
}

.feed-tabs-wrapper .feed-tabs-list-desktop li.active button {
    background: var(--pure-white);
    border-right: 1px solid var(--bs-border-color);
    border-left: 1px solid var(--bs-border-color);
}

/* feed start */
.feed-wrapper .feed.cards > ul {
    grid-template-columns: 1fr;
}

.feed-wrapper .card-wrapper {
    height: 100%;
}

.feed-wrapper .card-wrapper .cards-card-image .one-image-available img {
    aspect-ratio: 4 / 3;
    object-fit: cover;
}

@media screen and (width >= 576px) and (width <= 991px) {
    .feed-wrapper .card-wrapper .cards-card-image .one-image-available img {
        aspect-ratio: 4 / 1;
    }
} 

.feed-wrapper .card-wrapper .card-title {
    display: -webkit-box;
    height: 38px;
    font-size: 16px;
    line-height: 1.2;
    font-family: var(--ff-acceptance-regular);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: break-spaces;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

.feed-wrapper .card-wrapper .card-description {
    min-height: 110px;
    max-height: 110px;
    display: -webkit-box;
    line-clamp: 4;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
    color: #171714;
    font-size: 16px;
    letter-spacing: 0;
    line-height: 26px;
}

.feed-wrapper .load-more-wrapper {
    display: flex;
    justify-content: center;
    margin-block: 1.2rem
}

.feed-wrapper .load-more-wrapper .load-more {
    border: 3px solid var(--btn-secondary-border); 
    border-radius: 5px;
    background-color: var(--very-light-gray);
    padding: .3rem 2rem;
    color: var(--btn-secondary-border);
}


@media (width >=992px) {
    .section-outer.feed-tabs {
        background: linear-gradient(rgb(200 200 200 / 0%) 30%, rgb(200 200 200 / 90%));
    }

    .section-outer.feed-tabs .feed-tabs-wrapper {
        padding: 0 12rem;
        max-width: unset;
    }

    .feed-tabs-wrapper .feed-tabs::after {
        display: none;
    }

    .feed-tabs-wrapper .feed-tabs-select-mobile {
        display: none;
    }

    .feed-tabs-wrapper .feed-tabs-list-desktop {
        display: flex;
    }

   /* feed start */
    .feed-wrapper {
        padding-inline: 16px;
    }

    .feed-wrapper .card-wrapper .card-image-all {
        display: block;
    }

    .feed-wrapper .feed.cards > ul {
        grid-template-columns: repeat(4, minmax(212px, 1fr));
    }

    .feed-wrapper .feed.cards .featured-card {
        grid-column: span 2;
    }

    .feed-wrapper .feed.cards .featured-card .card-wrapper {
        padding: 0;
    }

    .feed-wrapper .feed.cards .featured-card .cards-card-image {
        height: 50%;
    }

    .feed-wrapper .feed.cards .featured-card .cards-card-image div,
    .feed-wrapper .feed.cards .featured-card .cards-card-image picture,
    .feed-wrapper .feed.cards .featured-card .cards-card-image img{
        height: 100%;
    }

    .feed-wrapper .feed.cards .featured-card .cards-card-image img {
        aspect-ratio: 4 / 1;
    }

    .feed-wrapper .feed.cards .featured-card .cards-card-body {
        padding: 16px 24px;
        height: 50%;
    }

    .feed-wrapper .feed.cards .featured-card .cards-card-body > div {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        height: 100%;
    }

    .feed-wrapper .feed.cards .featured-card .cards-card-body > div > p {
        margin: 0;
    }

    .feed-wrapper .feed.cards .featured-card .card-image-all {
        display: none;
    } 

    .feed-wrapper .feed.cards .featured-card .ellipsed .card-description {
        line-clamp: 2;
        -webkit-line-clamp: 2;
        min-height: 52px;
    }
}

